Spacing fixes

--- a/app/javascript/styles/base/_base.scss
+++ b/app/javascript/styles/base/_base.scss
@@ -1,3 +1,4 @@
+@import '../abstracts/colors';
 *,
 *::after,
 *::before
@@ -22,11 +23,19 @@ body {
   height: 100%;
   width: 100%;
   //Make scrollbar above content (chrome + safari)
-  overflow-y: scroll;
-  overflow-y: overlay;
-  background-color: #f5f5f5;
+  /// TODO: wtf?
+  //overflow-y: scroll;
+  //overflow-y: overlay;
   margin: 0 !important;
 }
+
+body.light {
+  background-color: $backgroundGrey;
+}
+body.dark {
+  background-color: $backgroundGreyDark;
+}
+
 
 /* Remove default margin */
 body,
